# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.197 2005/11/28 21:48:03 agaffney Exp $

*GLI-gtkfe-0.3 (27 Oct 2005)

  28 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  rename Client Config screen to Pre-install Config
  list currently loaded modules on the right side of the client config screen
  add scrollbar to module list
  check 'Network already setup' if gentoo.org can be pinged

  27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  wrap text in log and output view
  add vertical scrollbars
  scroll with scrollbars instead of textbuffer iter crap
  scrollbars suck...autoscrolling the old way
  cleanup (still commented) autoscroll code with vadjustment

  26 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  move partition debug button to top row so it's always visible
  add bit about installer version to failure message
  spread out filesystem types in key

  25 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  show mountpoint in partition summary on main screen
  allow partition size less than 1/<width of slider>*<drive size MB>
  fix unalloc->part size
  don't allow MB sizes out of bounds to be entered
  don't let part_size less than min-size be entered

  21 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  new paragraph on welcome screen
  help button launches firefox to view handbook
  
  19 Nov 2005; John N. Laliberte <allanonjl@gentoo.org>
  ExtraPackages.py: use new method get_install_package_list() from
  installprofile.
  
  6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  Everybody loves Hypnotoad..err...Futurebar!

*GLI-gtkfe-0.2 (27 Oct 2005)

  25 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  disable Dynamic option if systempkgs.txt not present

  24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  add Verbose option to ClientConfig

  22 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  add tab for tailing the log file
