@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.197 2005/11/28 21:48:03 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.198 2005/11/29 01:23:31 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
@@ -9,6 +9,7 @@
   list currently loaded modules on the right side of the client config screen
   add scrollbar to module list
   check 'Network already setup' if gentoo.org can be pinged
+  clean up loaded module list
 
   27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   wrap text in log and output view
